Give setting values more space, fix unwanted text wrap in text inputs

--- a/src/api.css
+++ b/src/api.css
@@ -8,7 +8,7 @@
 
 @layer components {
     .input-field {
-        @apply input px-[--node-setting-padding] py-0.5 border-transparent;
+        @apply input px-[--node-setting-padding] py-0.5 border-transparent whitespace-nowrap;
         box-shadow: none;
     }
 }
